Obtener datos de emergencia de usuario
